[package]
name = "ygrep-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["embeddings"]
embeddings = ["ygrep-core/embeddings"]

[[bin]]
name = "ygrep"
path = "src/main.rs"

[dependencies]
ygrep-core = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { workspace = true }

# Utils
dirs = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
xxhash-rust = { workspace = true }

[dev-dependencies]
tempfile = "3"
